force-app/main/default/objects/Merchandise__c/fields/Merchandise_GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_GeoLocation__c</fullName>
    <label>Merchandise GeoLocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>