force-app/main/default/objects/Merchandise__c/fields/postal_code__c.field-meta.xml
<CustomField>
    <fullName>postal_code__c</fullName>
    <label>postal code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>